# botfriendly-shop

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cli.py  docker-compose.yml  docker-entrypoint.sh  feedback.md  patch.js  patch_category.py  patch_index.py  pyproject.toml  update_guides.py
checks/: accessibility.py  api_surface.py  base.py  discovery.py  feeds.py  html_extract.py  product_parseability.py  robots.py  semantic_accessibility.py  semantic_html.py  seo_meta.py  sitemap.py  structured_data.py
core/: batch.py  database.py  db_models.py  logging_config.py  models.py  scanner.py  scoring.py  url_validator.py  version.py
data/: ecom_urls.txt
scripts/: batch_scan.py  import_results.py
tests/: conftest.py  test_accessibility.py  test_admin.py  test_api_surface.py  test_discovery.py  test_feeds.py  test_models.py  test_persistence.py  test_product_parseability.py  test_robots.py  test_scanner.py  test_scoring.py  test_semantic_accessibility.py  test_semantic_html.py  test_seo_meta.py  test_sitemap.py  test_stats.py  test_structured_data.py  test_web_routes.py
web_app/: admin_routes.py  auth.py  default_urls.txt  main.py  routes.py
web_app/static/: app.js  style.css
web_app/templates/: 404.html  admin.html  bots.html  category_info.html  index.html  results.html  stats.html
