[project]
name = "botfriendly.shop"
version = "0.1.0"
description = "Ecommerce AI/LLM readiness checker"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "jinja2",
  "uvicorn",
  "sse-starlette",
  "sqlalchemy",
  "aiosqlite",
  "python-multipart",
  "httpx",
  "slowapi",
  "python-dotenv",
  "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
  "playwright",
  "pytest",
  "pytest-asyncio",
  "pytest-timeout",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "core.*", "checks", "checks.*", "web_app", "web_app.*"]
